tests/integration/errors/infer-return.orng
// 238
fn main() -> Int {
    match f() {
        .ok => unreachable
        .some_error => 238
        else => unreachable
    }
}

fn f() -> !Int {
    return .some_error
}